Readability fixes

--- a/dd.css
+++ b/dd.css
@@ -305,6 +305,7 @@ div.maneuver{
     margin-bottom: .5em;
     margin-left: 6px;
     margin-right: 6px;
+    background-color: rgb(255, 243, 224);
 }
 div.maneuver_title{
     font-weight: bold;
@@ -358,5 +359,22 @@ table.weapon_stats .even {
 }
 table.weapon_stats tr td:nth-child(1){
     text-align:right;
+}
+
+section.feat {
+    max-width:34em;
+    background-color: rgb(248,243,224);
+}
+.feat h4 {
+    color: black;
+}
+.spell {
+    background-color: rgb(255, 243, 224);
+    padding: 4px;
+    border: 1px solid grey;
+}
+
+.feat .spell h5 {
+    margin-top: 0;
 }
 
